--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
 <resources>
     <string name="app_name">Quake Report</string>
     <string name="near_the">Near the</string>
+    <string name="no_earthquake">No Earthquake found Now</string>
+    <string name="no_internet_connection">Check your INTERNET Connection</string>
 </resources>
